--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
 <html>
 
 <!--HEAD-->
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Andrea Serra - Website</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>Andrea Serra - UX & Digital Product Designer</title>
+	<meta name="description" content="I'm a digital product designer based in Milan">
+	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
+	<meta name="author" content="Andrea Serra">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<!--HEAD-->
 
 
 
 <!--BODY-->
-	<body class="resimgbackground">
-
-	<!--HOME-->
-	<div class="container-fluid home-fix" style="width:100%">
-
-		<div>
-		<h1 class="home-title mohave bold">HELLO, WORLD!</h1>
-		</div>
-
-		<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
-		<p class="home-text mohave">Andrea's website under construction</p>
-		</div>
-
+<body class="">
+	<div class="animated fadeIn wrap anima" style="animation-delay: 1s;">
+		<h1 class="title montserrat">Hello visitor 👋 <br> I'm currently coding the new website! <br> Follow me to find out when it's going live 🤓 </h1>
 	</div>
+</body>
+<!--BODY-->
 
-
-
-
-	</body>
-
+<link rel="icon" href="img/as.png">
 
 </html>
