--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+<html lang="en">
 
 <!--HEAD-->
 <head>
 	<meta charset="utf-8">
 	<title>Andrea Serra - UX & Digital Product Designer</title>
-	<meta name="description" content="I'm a digital product designer based in Milan">
+	<meta name="description" content="I'm a digital product designer based in Milan, Italy">
 	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
 	<meta name="author" content="Andrea Serra">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -15,9 +15,17 @@
 
 
 <!--BODY-->
-<body class="">
-	<div class="animated fadeIn wrap anima" style="animation-delay: 1s;">
-		<h1 class="title montserrat">Hello visitor 👋 <br> I'm currently coding the new website! <br> Follow me to find out when it's going live 🤓 </h1>
+<body class="animated fadeIn" style="animation-delay: 2.5s;">
+
+	<div class="fadeIn wrap">
+		<h1 class="title montserrat" style="margin-left:0px;"> Hello visitor 👋,  <br><br> I'm currently coding the new website! <br> Follow me to find out when it's going live 🖥️ </h1>
+		<div class="link-container">
+			<a href="https://www.linkedin.com/in/andreaserra92" target="_blank" class="link linkedin" style=""></a>
+			<a href="https://www.instagram.com/andrea.srr/" target="_blank" class="link instagram" style="margin-top: 3px;"></a>
+			<a href="mailto:andrea.serra@outlook.com" class="link email" style="margin-top: 3px;"></a>
+		</div>
+
+		</div>
 	</div>
 </body>
 <!--BODY-->
