--- a/index.html
+++ b/index.html
@@ -8,28 +8,264 @@
 	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
 	<meta name="author" content="Andrea Serra">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="stylesheet" href="css/styleV2.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:200,500&display=swap" rel="stylesheet">
 </head>
 <!--HEAD-->
 
 
 
 <!--BODY-->
-<body class="animated fadeIn" style="animation-delay: 2.5s;">
+<body style="">
 
-	<div class="fadeIn wrap">
-		<h1 class="title montserrat" style="margin-left:0px;"> Hello visitor 👋,  <br><br> I'm currently coding the new website! <br> Follow me to find out when it's going live 🖥️ </h1>
-		<div class="link-container">
-			<a href="https://www.linkedin.com/in/andreaserra92" target="_blank" class="link linkedin" style=""></a>
-			<a href="https://www.instagram.com/andrea.srr/" target="_blank" class="link instagram" style="margin-top: 3px;"></a>
-			<a href="mailto:andrea.serra@outlook.com" class="link email" style="margin-top: 3px;"></a>
-		</div>
+	<div id="loader" class="loader animated fadeOut" style="animation-delay:1.5s; text-align:center; background-color:#5a5a6e;">
+		<p class="animated fadeOut" style="margin-top:42vh; font-size:24px; animation-delay:1.5s; font-weight: 300; font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,Droid Sans, Helvetica Neue, sans-serif; pointer-events: none; color: white; "> Assembling pixels ... </p>
+	</div>
 
+<!--header e nav menu-->
+<header id="header" class="header">
+	<div id="header-container" class="" style="display: flex; justify-content: space-between; align-items: center; max-height:48px; margin-top:0px">
+		<a href="index.html" id="logo" class="logo"></a>
+		<button id="navbutton" class="navbutton">
+			<span id="navlabel"class="textlink" style="height:18px;width:150px; text-align:right;">open menu</span>
+			<div class="hamburger">
+				<div id="hamb1"class="hamburger-line"></div>
+				<div id="hamb2"class="hamburger-line"></div>
+				<div id="hamb3"class="hamburger-line"></div>
+			</div>
+		</button>
 		</div>
 	</div>
+	<nav id="navlist" class="navlist hide">
+		<a id="menulink1" href="#" class="menulink hide menulink-selected">Home</a>
+		<a id="menulink2" href="projects.html" class="menulink hide ">Projects</a>
+		<a id="menulink3" href="about.html" class="menulink hide">About me</a>
+		<a id="menulink4" href="contacts.html" class="menulink hide">Contacts</a>
+	</nav>
+	<!--
+	<div id="lang-options"class="lang-options perimeter">
+		<a id="eng" href="#" class="">ENG</a>
+		<a id="ita" href="#" class="">ITA</a>
+		<div class=""></div>
+	</div>
+	-->
+</header>
+<div id="header-background" class="header-background"></div>
+<div id="header-ovl" class="header-ovl header-ovl-hide"></div>
+<!--header e nav menu-->
+
+<!--landing viewport-->
+<section id="landing" class="landing wrap">
+		<h1 class="title" style="width:100%;"> Hi, I'm Andrea <br>
+			a <strong style="font-weight:600;">digital product designer</strong><br>
+			based in Milan, Italy.
+		</h1>
+		<button id="arrowicon" class="arrowicon" >
+			<div id="arrow" class="arrow"></div>
+			<span id="arrowlabel" class="textlink"> discover </span>
+		</button>
+</section>
+<!--landing viewport-->
+<div id="scroll" style="height:80px" class="">
+</div>
+<!--services-->
+<section id="services" class="section wrap">
+	<h2 id="subtl1"class="subtitle">what I can do for you</h2>
+	<!--accordion1-->
+	<div id="accordion1"class="accordion">
+		<div class="accordion-wrap">
+			<p id="accordion-label1" class="accordion-label">UX Design</p>
+			<button id="readmore1" class="button ">
+				<span id="readmore-label1"class="textlink" style="text-align:right;">read more</span>
+				<div id="readmore-ico1"class="ico">
+				</div>
+			</button>
+		</div>
+		<p id="accordion-text1" class="paragraph hide">
+			User Experience should be a focus of every good digital product, at every step of the process, from strategy to development.
+			It's about <strong style="font-weight:500;">failing often</strong> and <strong style="font-weight:500;">iterating fast</strong> to <strong style="font-weight:500;">avoid obvious problems</strong> and <strong style="font-weight:500;">include best practices</strong> and <strong style="font-weight:500;">novel</strong> tweaks to the software.
+			As a UX Designer I daily use <strong style="font-weight:500;">personas, information architectures, user journeys, static wireframes</strong> and <strong style="font-weight:500;">low-fi prototypes</strong> to present, discuss and test ideas. I am also trained to critically look at an existing product and identify problems and areas of improvement in the experience.
+		</p>
+	</div>
+	<!--accordion1-->
+	<!--accordion2-->
+	<div id="accordion2" class="accordion">
+		<div class="accordion-wrap">
+			<p id="accordion-label2" class="accordion-label">UI & Interaction Design</p>
+			<button id="readmore2" class="button ">
+				<span id="readmore-label2"class="textlink" style="text-align:right;">read more</span>
+				<div id="readmore-ico2"class="ico">
+				</div>
+			</button>
+		</div>
+		<p id="accordion-text2" class="paragraph hide">
+			To me <strong style="font-weight:500;">good UI</strong> is about making things legible, understandable, organized and interesting to the eye and I like designing interfaces that are <strong style="font-weight:500;">responsive, componentized</strong> and <strong style="font-weight:500;">animated</strong>.
+			When I look at a component <!--I don’t see it as a static object, but rather as a living creature-->I always ask myself: what is the <strong style="font-weight:500;">main goal</strong> of this component? How is it going to <strong style="font-weight:500;">adapt</strong> to the space surrounding it? How is it going to <strong style="font-weight:500;">behave</strong> when users will interact with it?<br>
+			<!--Great interactive animations cannot save a bad layout and good visual design alone is often difficult to use without well integrated animations.-->
+			I believe UI and Interaction design cannot fully work without each other, a product needs both to achieve <strong style="font-weight:500;">true visual greatness</strong> and <strong style="font-weight:500;">excellent user experience</strong>.
+		</p>
+	</div>
+	<!--accordion2-->
+	<!--accordion3-->
+	<div id="accordion3" class="accordion">
+		<div class="accordion-wrap">
+			<p id="accordion-label3" class="accordion-label">Code & Prototypes</p>
+			<button id="readmore3" class="button " >
+				<span id="readmore-label3"class="textlink" style="text-align:right;">read more</span>
+				<div id="readmore-ico3"class="ico">
+				</div>
+			</button>
+		</div>
+		<p id="accordion-text3" class="paragraph hide">
+			Code is the material of digital design, and good designers should know the material they are working with. <br>
+			I am <strong style="font-weight:500;"> not a software engineer</strong>, I don’t build apps, I cannot manage backend infrastructures and dynamic data.
+			However, I know how to write and read <strong style="font-weight:500;">vanilla HTML, CSS</strong> and <strong style="font-weight:500;">JS </strong>. I enjoy coding interactive prototypes, as well as simple websites (<strong style="font-weight:500;"> like the one you’re looking at right now </strong>) and I am constantly looking into the new tools that make it easier for designers to be involved with frontend (like <strong style="font-weight:500;">CSS Grids, Webflow</strong> and more). <br>
+			I cannot replace developers, but I can speak their language, understand their needs and work with (not against) them.
+		</p>
+	</div>
+	<!--accordion3-->
+</section>
+<!--services-->
+
+<!--clients-->
+<section id="clients" class="section wrap" style="background-color:#f9f9fc;">
+	<h2 id="subtl2"class="subtitle">companies I worked with</h2>
+	<div class="clientlogo-container">
+		<div class="clientlogo alkemy"></div>
+		<div class="clientlogo trenord"></div>
+		<div class="clientlogo vodafone"></div>
+		<div class="clientlogo blockzero"></div>
+		<div class="clientlogo electrolux"></div>
+	</div>
+	<div class="gotoprojects-container">
+		<p class="paragraph " style="max-width: 100%; text-align:center; line-height:1.5; font-size:14px;">The work I do as an employee is often under NDA and the result of a strong team effort. <br>
+				To get a better idea of my core skills, you can check my selection of projects.</p>
+		<a id="cta-project" href="projects.html" class="cta" style="text-align:center; text-decoration:none; pointer-events:auto; line-height:52px;">go to projects</a>
+	</div>
+
+</section>
+<!--clients-->
+
+<!--about-->
+<section id="aboutme" class="section wrap" style="padding-bottom:200px !important;">
+	<h2 id="subtl3"class="subtitle">a little about me</h2>
+	<div id="bio-container" class="bio-container">
+  	<div id="biopic" class="biopic">
+		</div>
+		<div id="biosummary" class="biosummary" >
+				<p id="bio-description" class="paragraph">
+					<!--For the stats 📈 junkies tuning in,-->
+					Hi there 👋 ! I’m Andrea, a 27 years old digital product designer from Italy, currently based in Milan. <br><br style="line-height:0.8;">
+					I have 2+ years of professional experience working both in Italy and abroad 🌍, for startups 🏓 as well as multinational corporations 👔.
+					With 6 years of academic design education 📖, 2 university degrees 🎓 and several self-inflicted design/coding courses, I am not a designer by accident: I intentionally decided to pursuit this career and I absolutely love my job. <br><br style="line-height:0.8;">
+					I value honesty, humble opinions and direct feedbacks. I’m always searching for ways to improve myself and I’d love to add more meaningful positive impact in the world through my work .  <br><br style="line-height:0.8;">
+					I think design is not a deliverable, it’s a process, and I believe a successful project can only be judged when a real product is in the hands of real users.
+				</p>
+				<a href="about.html" class="no-style-atag">
+				<button id="readmore4" class="button" style="margin-top:32px;" >
+					<span id="readmore-label4"class="textlink" style="text-align:right;">read more about me</span>
+					<div id="readmore-ico4"class="ico"></div>
+				</button>
+				</a>
+		</div>
+	</div>
+</section>
+<!--about-->
+
+<!--footer-->
+<footer id="footer" class="footer" >
+	<h2 id="subtl4"class="subtitle wrap">wanna know more?</h2>
+	<div id="footer-container"class="footer-container wrap ">
+
+		<div id="footer-subcontainer1" class="footer-subcontainer" >
+			<h4 id="footer-section1" class="footer-section" > See also</h4>
+			<!--
+			<a class="no-style-atag" ><p class="footer-link nounderline" style="cursor:not-allowed !important;">My projects (coming soon)</p></a>
+			-->
+			<a href="projects.html" class="no-style-atag" ><p class="footer-link">My projects</p></a>
+			<a href="about.html"   class="no-style-atag"><p class="footer-link">About my background</p></a>
+			<a href="contacts.html"   class="no-style-atag"><p class="footer-link">Contacts & Socials</p></a>
+		</div>
+
+		<div id="footer-subcontainer2" class="footer-subcontainer">
+			<h4 id="footer-section2" class="footer-section" > Latest projects</h4>
+			<a  class="no-style-atag"><p class="footer-link nounderline" style="cursor:not-allowed !important;">Project 1</p></a>
+			<a  class="no-style-atag"><p class="footer-link nounderline" style="cursor:not-allowed !important;">Project 2</p></a>
+			<a  class="no-style-atag"><p class="footer-link nounderline" style="cursor:not-allowed !important;">Project 3</p></a>
+		</div>
+
+		<div id="footer-subcontainer3" class="footer-subcontainer">
+			<h4 id="footer-section3" class="footer-section"> Articles I like</h4>
+			<a target="_blank" href="https://medium.com/swlh/state-of-the-digital-nation-2020-venture-road-22de4377836" class="no-style-atag"><p class="footer-link" >State of the Digital Nation 2020</p></a>
+			<a target="_blank" href="https://medium.com/signal-v-noise/the-calm-company-our-next-book-d0ed917cc457" class="no-style-atag"><p class="footer-link" >The Calm Company</p></a>
+			<a target="_blank" href="https://uxplanet.org/the-golden-age-of-ux-is-over-ac318099c5b9" class="no-style-atag"><p class="footer-link" >The Golden Age of UX is Over</p></a>
+		</div>
+
+	</div>
+</footer>
+<!--footer-->
+
+<!--fab-->
+<button id="fab" class="fab">
+	<div id="fabicon" class="fabicon "></div>
+	<span id="fablabel" class="fablabel buttonlabel" style="color:white">GET IN TOUCH</span>
+</button>
+
+<div id="contact-ovl" class="contact-ovl contact-ovl-hide" style="">
+</div>
+
+<div id="contact" class="contact hide">
+	<a target="_blank" href="mailto:andrea.serra@outlook.com" id="contact-element1" class="contact-element happy3" style="text-decoration:none;">
+		<div id="contacticon" class="contacticon email" style="height:26px; width:26px;"></div>
+		<p id="contactlabel" class="textlink contactlabel">andrea.serra@outlook.com</p>
+	</a>
+	<a target="_blank" href="https://www.instagram.com/andrea.srr/" id="contact-element2" class="contact-element happy2" style="text-decoration:none;">
+		<div id="contacticon" class="contacticon instagram"></div>
+		<p id="contactlabel" class="textlink contactlabel">DM on Instagram</p>
+	</a>
+	<a target="_blank" href="https://www.linkedin.com/in/andreaserra92/" id="contact-element3" class="contact-element happy1" style="text-decoration:none;">
+		<div id="contacticon" class="contacticon linkedin"></div>
+		<p id="contactlabel" class="textlink contactlabel">DM on Linkedin</p>
+	</a>
+</div>
+<!--fab-->
+
+
+<!--ASYNCH JS-->
+<script type="text/javascript">
+function downloadJSAtOnload() {
+var element = document.createElement("script");
+element.src = "js/script.js";
+document.body.appendChild(element);
+}
+if (window.addEventListener)
+window.addEventListener("load", downloadJSAtOnload, false);
+else if (window.attachEvent)
+window.attachEvent("onload", downloadJSAtOnload);
+else window.onload = downloadJSAtOnload;
+</script>
+<!--ASYNCH JS-->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112699612-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112699612-3');
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
 </body>
 <!--BODY-->
 
-<link rel="icon" href="img/as.png">
+
+<!--FAVICON-->
+<link rel="icon" href="img/as2.png">
+<!--FAVICON-->
+
 
 </html>
