--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Andrea Serra - About</title>
-	<meta name="description" content="I'm a digital product designer based in Milan, Italy">
+	<meta name="description" content="I'm a digital product designer based in Turin, Italy">
 	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
 	<meta name="author" content="Andrea Serra">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -58,9 +58,8 @@
 
 <!--about landing-->
 <section id="about-landing" class="about-landing wrap ">
-		<h1 class="title" style="width:100%;"> A short recap of my <br>
-			<strong style="font-weight:600;"> story and design background</strong>,<br>
-			and why you should care.
+		<h1 class="title" style="width:100%;"> About my
+			<strong style="font-weight:600;">design background</strong> <br>and <strong style="font-weight:600;">values</strong>.
 		</h1>
 </section>
 <!--about landing-->
@@ -72,8 +71,8 @@
 	<div class="about-text-container">
 
 		<p class="about-text">
-		This page aims to be an informal CV that can hopefully convey my personality through written words.
-		It shouldn’t require more than 3 minutes to read it all.
+		This page aims to be an informal CV to convey my personality and values through written words. <br>
+		It shouldn’t take more than 3 minutes to read it all 🕒.
 		<!--
 		, but if you don’t have time you can use the following links to skip to the different paragraphs. <br><br style="line-height:0.8;"><br style="line-height:0.8;">
 		<span id="work experience" class="inlinetextlink nounderline" >work experience</span> <br><br style="line-height:0.8;">
@@ -86,42 +85,46 @@
 		<h2 class="about-subtitle">Work experience</h2>
 		<!-- I work in design teams since 2011 and I deal directly with clients since 2017: that is to say, I know how hard it is.  -->
 		<p class="about-text">
-		I currently work in Milan as a UX Designer for <a class="inlinetextlink" href="https://www.alkemy.com/en/" target="_blank">Alkemy</a>, a digital consultancy firm with clients in several industries (energy, transportation, fintech, telco, and many more).<br>
-		Before moving to Milan I worked as a UX/UI Designer for <a class="inlinetextlink" href="https://blockzero.se/" target="_blank">Blockzero</a>, a creative agency based in Malmö, Sweden, where I had the opportunity to work on a broad spectrum of projects (from internal products and startup projects, all the way to consultancy for a multinational corporation).<br>
-		My daily activities cover the entire UX process, from research and requirements to user testing.
+		I currently work in Turin (Italy) as a UX Designer for <a class="inlinetextlink" href="https://www.accenture.com/us-en" target="_blank">Accenture</a>.<br>
+		I previously worked as a UX Designer for <a class="inlinetextlink" href="https://www.alkemy.com/en/" target="_blank">Alkemy</a>, a digital consultancy firm based in Milan, and as a UX/UI Designer for <a class="inlinetextlink" href="https://blockzero.se/" target="_blank">Blockzero</a>, a creative agency based in Malmö, Sweden.
 		<br><br style="line-height:0.8;">
-		I particularly enjoy working in the middle of the design process (IA, user flows, high fidelity wireframes and prototyping). <br>
+		My daily activities cover the entire UX process, from research to user testing. <br>
+		I particularly enjoy working in the middle of the UX design process (IA, user flows, high fidelity wireframes and prototyping) and nerding out on small UI details.
+		<!--
 		I also like to work closely with developers way beyond the official “handoff”. This is often a very automatized and underestimated step of the process, but  I believe communication and empathy from both sides is key: this is the moment when a product takes shape successfully or fall apart.
+		-->
 		<br><br style="line-height:0.8;">
-		Working in design teams under pressure can be hard sometimes: I've been doing it daily since 2011 and it taught me how to approach it the right way.<br>
-		I don’t get offended or emotional if my designs need adjustments or someone come up with a better solution than mine. I like to give honest, humble and direct feedbacks and opinions and I expect the same in return. Method and efficiency is what I aim for and I only care about the success of the final result and about my standards for high quality design, hoping to always behave in professional and open-minded manners.
+		Working in design teams can be hard sometimes: I've been doing it daily since 2011 and it taught me how to approach it in a healthy way.<br>
+		I like to give honest and polite feedbacks and I don’t get offended or emotional about decisions and reviews. Method and efficiency is what I aim for and I only care about the quality of the final result, hoping to always behave in professional and open-minded manners.
+		<br><br style="line-height:0.8;">
+		I work fast, I think fast, I don't freak out under pressure; that doesn't mean I love impossibly tight timelines though.
+	  Working constantly overtime isn't a badge of honor, just a lack of process (and a one way ticket to burnout).
 		</p>
+
 
 		<h2 class="about-subtitle">Education</h2>
 
 		<p class="about-text">
-		I have a 2 years Master Degree in <a class="inlinetextlink" href="https://edu.mah.se/en/program/taind" target="_blank">Interaction Design</a> from Malmö University in Sweden, one of the oldest and most established HCI courses in Europe.<br>
-		I also own a Bachelor degree in <a class="inlinetextlink" href="https://didattica.polito.it/laurea/design/en/presentation" target="_blank">Design and Visual Communication</a> from the Polytechnic University of Turin, Italy.
+		I have a MSc degree in <a class="inlinetextlink" href="https://edu.mah.se/en/program/taind" target="_blank">Interaction Design</a> from Malmö University in Sweden and I also own a Bachelor degree in <a class="inlinetextlink" href="https://didattica.polito.it/laurea/design/en/presentation" target="_blank">Design and Visual Communication</a> from the Polytechnic University of Turin, Italy.<br>
+		Alongside academic studies, I constantly search for new design skills and methods through online courses.
 		<br><br style="line-height:0.8;">
-		Alongside academic studies, I constantly try to learn new skills and methods on digital design through several online courses. I also daily read news and essays on design and tech, trying to discover new patterns and trends in the industry.
-		<br><br style="line-height:0.8;">
-		I am obsessed with knowledge and I want to understand the complexity of my profession; I am not satisfied with bit and pieces of information, I need to see the big picture.<br>
+		I am obsessed with knowledge and I want to understand the complexity of a scenario before I start designing; I am not satisfied with bit and pieces of information, I need to see the big picture.<br>
 		Being “good enough” is not nearly enough for me: I want to be one of the best in my craft, yet I am never satisfied with what I do or know and I continuously try to improve my work and skills.<br>
 		</p>
 
 		<h2 class="about-subtitle">Life priorities</h2>
 
 		<p class="about-text" style="padding-bottom: 0px !important;">
-		When not working, I enjoy outdoor sports and activities and spending time surrounded by close friend, family, nature and animals.
-		I try to tune down the noises and distractions of everyday life to make space for joyful moment but people and experiences that can challenge my point of view are always welcomed in my life.<br>
+		When not working, I'm usually lost in wilderness enjoying outdoor sports and connecting with nature.
+		I try to tune down the distractions of everyday life to make space for joyful moment, meaningful people and challenging point of views.<br>
 		<br><br style="line-height:0.8;">
-		I am a very young, very healthy, very white male, born and raised in Italy, surrounded by a loving family. This puts me amongst the 1% privileged of humanity and I am slowly realizing it.<br>
-		I always try to not complain about my “struggles”, because I never truly had one: I know I need to work to achieve what I want and I try to always be grateful for the wonderful life I already have.
+		The older I get more I realize how privileged I am compared to the rest of the world, so I try to not complain about my “struggles”, because I never truly had one: I know I need to work to achieve what I want and I try to always be grateful for the wonderful life I already have.
 		<br><br style="line-height:0.8;">
 		Introvert and relativist by nature, I try everyday to become a better version of myself, leading by example rather than shouting my opinion, and treating people the way I’d like to be treated.
 		<br><br style="line-height:0.8;">
-		Right now my focus is on finding a balance between work and life, and I am optimistic enough to believe that I can build a successful career and have a lifestyle aligned with my values at the same time.
-		My dream is to build a life full of experiences and memories, while having the smallest environmental impact and the most positive influence in the community around me.
+		Right now my focus is on finding a balance between work and life, and I am optimistic (fool? 😉) enough to believe that I can build a successful career and have a lifestyle aligned with my values at the same time.
+		<br><br style="line-height:0.8;">
+		My dream is to have a life full of experiences and memories, while leaving behind the smallest environmental impact and the most positive influence in the community around me.
 		</p>
 
 	</div>
@@ -187,7 +190,7 @@
 		<p id="contactlabel" class="textlink contactlabel">andrea.serra@outlook.com</p>
 	</a>
 	<a target="_blank" href="https://www.instagram.com/andrea.srr/" id="contact-element2" class="contact-element happy2" style="text-decoration:none;">
-		<div id="contacticon" class="contacticon instagram"></div>
+		<div id="contacticon" class="contacticon insta"></div>
 		<p id="contactlabel" class="textlink contactlabel">DM on Instagram</p>
 	</a>
 	<a target="_blank" href="https://www.linkedin.com/in/andreaserra92/" id="contact-element3" class="contact-element happy1" style="text-decoration:none;">
