--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Andrea Serra - UX & Digital Product Designer</title>
-	<meta name="description" content="I'm a digital product designer based in Milan, Italy">
+	<meta name="description" content="I'm a digital product designer based in Turin, Italy">
 	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
 	<meta name="author" content="Andrea Serra">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -58,9 +58,9 @@
 
 <!--landing viewport-->
 <section id="landing" class="landing wrap">
-		<h1 class="title" style="width:100%;"> Hi, I'm Andrea <br>
+		<h1 class="title" style="width:100%;"> Hi, I'm Andrea <span style="font-size:22px;">👋</span><br>
 			a <strong style="font-weight:600;">digital product designer</strong><br>
-			based in Milan, Italy.
+			based in Turin, Italy.
 		</h1>
 		<button id="arrowicon" class="arrowicon" >
 			<div id="arrow" class="arrow"></div>
@@ -86,7 +86,7 @@
 		<p id="accordion-text1" class="paragraph hide">
 			User Experience should be a focus of every good digital product, at every step of the process, from strategy to development.
 			It's about <strong style="font-weight:500;">failing often</strong> and <strong style="font-weight:500;">iterating fast</strong> to <strong style="font-weight:500;">avoid obvious problems</strong> and <strong style="font-weight:500;">include best practices</strong> and <strong style="font-weight:500;">novel</strong> tweaks to the software.
-			As a UX Designer I daily use <strong style="font-weight:500;">personas, information architectures, user journeys, static wireframes</strong> and <strong style="font-weight:500;">low-fi prototypes</strong> to present, discuss and test ideas. I am also trained to critically look at an existing product and identify problems and areas of improvement in the experience.
+			As a UX Designer I daily use <strong style="font-weight:500;">personas, information architectures, user journeys, static wireframes</strong> and <strong style="font-weight:500;">low-fi prototypes</strong> to present, discuss and test ideas.
 		</p>
 	</div>
 	<!--accordion1-->
@@ -102,9 +102,9 @@
 		</div>
 		<p id="accordion-text2" class="paragraph hide">
 			To me <strong style="font-weight:500;">good UI</strong> is about making things legible, understandable, organized and interesting to the eye and I like designing interfaces that are <strong style="font-weight:500;">responsive, componentized</strong> and <strong style="font-weight:500;">animated</strong>.
-			When I look at a component <!--I don’t see it as a static object, but rather as a living creature-->I always ask myself: what is the <strong style="font-weight:500;">main goal</strong> of this component? How is it going to <strong style="font-weight:500;">adapt</strong> to the space surrounding it? How is it going to <strong style="font-weight:500;">behave</strong> when users will interact with it?<br>
+			When I look at a component <!--I don’t see it as a static object, but rather as a living creature-->I always ask myself: what is the <strong style="font-weight:500;">main goal</strong> of this component? How is it going to <strong style="font-weight:500;">adapt</strong> to different screen sizes? How is it going to <strong style="font-weight:500;">behave</strong> during and after the interaction?<br>
 			<!--Great interactive animations cannot save a bad layout and good visual design alone is often difficult to use without well integrated animations.-->
-			I believe UI and Interaction design cannot fully work without each other, a product needs both to achieve <strong style="font-weight:500;">true visual greatness</strong> and <strong style="font-weight:500;">excellent user experience</strong>.
+			I believe UI and Interaction Design cannot fully work without each other; a product needs both to achieve <strong style="font-weight:500;">true visual greatness</strong> and <strong style="font-weight:500;">excellent user experience</strong>.
 		</p>
 	</div>
 	<!--accordion2-->
@@ -120,8 +120,7 @@
 		</div>
 		<p id="accordion-text3" class="paragraph hide">
 			Code is the material of digital design, and good designers should know the material they are working with. <br>
-			I am <strong style="font-weight:500;"> not a software engineer</strong>, I don’t build apps, I cannot manage backend infrastructures and dynamic data.
-			However, I know how to write and read <strong style="font-weight:500;">vanilla HTML, CSS</strong> and <strong style="font-weight:500;">JS </strong>. I enjoy coding interactive prototypes, as well as simple websites (<strong style="font-weight:500;"> like the one you’re looking at right now </strong>) and I am constantly looking into the new tools that make it easier for designers to be involved with frontend (like <strong style="font-weight:500;">CSS Grids, Webflow</strong> and more). <br>
+			I am <strong style="font-weight:500;"> not a software engineer</strong>, however, I know how to write and read <strong style="font-weight:500;">vanilla HTML, CSS</strong> and <strong style="font-weight:500;">JS </strong>. I enjoy coding interactive prototypes, as well as simple websites (<strong style="font-weight:500;"> like the one you’re looking at right now </strong>) and I am constantly looking into the new tools that make it easier for designers to be involved with frontend (like <strong style="font-weight:500;">CSS Grids, Webflow</strong> and more).
 			I cannot replace developers, but I can speak their language, understand their needs and work with (not against) them.
 		</p>
 	</div>
@@ -133,11 +132,13 @@
 <section id="clients" class="section wrap" style="background-color:#f9f9fc;">
 	<h2 id="subtl2"class="subtitle">companies I worked with</h2>
 	<div class="clientlogo-container">
-		<div class="clientlogo alkemy"></div>
-		<div class="clientlogo trenord"></div>
-		<div class="clientlogo vodafone"></div>
-		<div class="clientlogo blockzero"></div>
-		<div class="clientlogo electrolux"></div>
+		<div class="clientlogo accenture"></div>
+		<div class="clientlogo clientlogo-square alkemy"></div>
+		<div class="clientlogo nowtv"></div>
+		<div class="clientlogo clientlogo-square vodafone"></div>
+		<div class="clientlogo clientlogo-square trenord"></div>
+		<div class="clientlogo clientlogo-square blockzero"></div>
+		<div class="clientlogo clientlogo-square electrolux"></div>
 	</div>
 	<div class="gotoprojects-container">
 		<p class="paragraph " style="max-width: 100%; text-align:center; line-height:1.5; font-size:14px;">The work I do as an employee is often under NDA and the result of a strong team effort. <br>
@@ -157,11 +158,16 @@
 		<div id="biosummary" class="biosummary" >
 				<p id="bio-description" class="paragraph">
 					<!--For the stats 📈 junkies tuning in,-->
-					Hi there 👋 ! I’m Andrea, a 27 years old digital product designer from Italy, currently based in Milan. <br><br style="line-height:0.8;">
-					I have 2+ years of professional experience working both in Italy and abroad 🌍, for startups 🏓 as well as multinational corporations 👔.
-					With 6 years of academic design education 📖, 2 university degrees 🎓 and several self-inflicted design/coding courses, I am not a designer by accident: I intentionally decided to pursuit this career and I absolutely love my job. <br><br style="line-height:0.8;">
-					I value honesty, humble opinions and direct feedbacks. I’m always searching for ways to improve myself and I’d love to add more meaningful positive impact in the world through my work .  <br><br style="line-height:0.8;">
-					I think design is not a deliverable, it’s a process, and I believe a successful project can only be judged when a real product is in the hands of real users.
+					Hi there 👋 ! I’m Andrea, a digital product designer currently based in Turin, Italy.
+					<br><br style="line-height:0.8;">
+					I have 5 years of professional experience working both in Italy and abroad 🌍, for startups 🏓 as well as multinational corporations 👔.
+					With 6 years of academic design education 🎓 and several self-inflicted design/coding courses, I am not a designer by accident: I intentionally decided to pursuit this career and I absolutely love my job.
+					<br><br style="line-height:0.8;">
+					<!--
+					I value honesty, humble opinions and direct feedbacks. I’m always searching for ways to improve myself and I’d love to add more meaningful positive impact in the world through my work .
+					<br><br style="line-height:0.8;">
+				  -->
+					I think design is not a deliverable, it’s a process, and I believe a project can only be judged when a real product is in the hands of real users.
 				</p>
 				<a href="about.html" class="no-style-atag">
 				<button id="readmore4" class="button" style="margin-top:32px;" >
@@ -222,7 +228,7 @@
 		<p id="contactlabel" class="textlink contactlabel">andrea.serra@outlook.com</p>
 	</a>
 	<a target="_blank" href="https://www.instagram.com/andrea.srr/" id="contact-element2" class="contact-element happy2" style="text-decoration:none;">
-		<div id="contacticon" class="contacticon instagram"></div>
+		<div id="contacticon" class="contacticon insta"></div>
 		<p id="contactlabel" class="textlink contactlabel">DM on Instagram</p>
 	</a>
 	<a target="_blank" href="https://www.linkedin.com/in/andreaserra92/" id="contact-element3" class="contact-element happy1" style="text-decoration:none;">
