--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Andrea Serra - Projects</title>
-	<meta name="description" content="I'm a digital product designer based in Milan, Italy">
+	<meta name="description" content="I'm a digital product designer based in Turin, Italy">
 	<meta name="Keywords" content="UX designer, UI designer, interaction designer, digital product designer, user experience">
 	<meta name="author" content="Andrea Serra">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -72,118 +72,118 @@
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 	<div class="project-container" style="margin-bottom:0px !important;">
 		<a class="project-link">
 			<div class="project" >
-				<span class="project-link-label">GO TO PROJECT PAGE</span>
+				<span class="project-link-label">COMING SOON</span>
 			</div>
 			<h3 class="project-name">Project name</h3>
 		</a>
 		<span class="project-tag">role:</span>  <span class="project-detail">UX / UI / FRONTEND</span> <br>
 		<span class="project-tag">industry:</span>  <span class="project-detail">tech startup</span> <br>
 		<span class="project-tag">duration:</span>  <span class="project-detail">12 months</span> <br>
-		<span class="project-tag">year:</span>  <span class="project-detail">2018</span>
+		<span class="project-tag">year:</span>  <span class="project-detail">2022</span>
 	</div>
 
 </section>
@@ -244,7 +244,7 @@
 		<p id="contactlabel" class="textlink contactlabel">andrea.serra@outlook.com</p>
 	</a>
 	<a target="_blank" href="https://www.instagram.com/andrea.srr/" id="contact-element2" class="contact-element happy2" style="text-decoration:none;">
-		<div id="contacticon" class="contacticon instagram"></div>
+		<div id="contacticon" class="contacticon insta"></div>
 		<p id="contactlabel" class="textlink contactlabel">DM on Instagram</p>
 	</a>
 	<a target="_blank" href="https://www.linkedin.com/in/andreaserra92/" id="contact-element3" class="contact-element happy1" style="text-decoration:none;">
