--- a/contacts.html
+++ b/contacts.html
@@ -70,11 +70,11 @@
 <section class="contacts-grid wrap">
 
 	<a href="https://www.linkedin.com/in/andreaserra92/" target="_blank">
-	<div class="contacts-item contact-linkedin linkedin" style="background-size: 80% !important;"></div>
+	<div class="contacts-item linkedin" style="background-size: 80% !important;"></div>
 	</a>
 
 	<a href="https://www.instagram.com/andrea.srr/" target="_blank">
-	<div class="contacts-item instagram" style="background-size: 90% !important;"></div>
+	<div class="contacts-item insta" style="background-size: 90% !important;"></div>
 	</a>
 
 	<a href="https://github.com/AndreaSerra" target="_blank">
